--- a/app/src/main/res/layout/activity_female_disease.xml
+++ b/app/src/main/res/layout/activity_female_disease.xml
@@ -21,41 +21,89 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
-    <!--질염 버튼 버튼 -->
-    <Button
-        android:id="@+id/btn_vaginitis"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_female_disease"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="100dp"
-        android:text="vaginitis"
-        android:textAllCaps="false"
-        android:textSize="36dp"
-        android:background="@drawable/style_drug_option"
-        android:elevation="3dp">
-    </Button>
+        app:layout_constraintBottom_toBottomOf="parent">
+        <LinearLayout
+            android:id="@+id/layout_products_of_menstruation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_breast_cancer"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:background="@drawable/style_products_content"
+                android:gravity="center"
+                android:text="Breast Cancer"
+                android:textStyle="bold"
+                android:textColor="@color/primary_light"
+                android:textSize="40dp"></TextView>
+
+            <TextView
+                android:id="@+id/text_cervical_cancer"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:background="@drawable/style_products_content"
+                android:gravity="center"
+                android:text="Cervical Cancer"
+                android:textStyle="bold"
+                android:textColor="@color/primary_light"
+                android:textSize="40dp"></TextView>
+
+            <TextView
+                android:id="@+id/text_vaginitis"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:background="@drawable/style_products_content"
+                android:gravity="center"
+                android:text="Vaginitis"
+                android:textStyle="bold"
+                android:textColor="@color/primary_light"
+                android:textSize="40dp"></TextView>
+
+            <TextView
+                android:id="@+id/text_pcos"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:background="@drawable/style_products_content"
+                android:gravity="center"
+                android:text="Polycystic ovary syndrome"
+                android:textStyle="bold"
+                android:textColor="@color/primary_light"
+                android:textSize="40dp"></TextView>
+
+            <TextView
+                android:id="@+id/text_aids"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:background="@drawable/style_products_content"
+                android:gravity="center"
+                android:text="AIDS"
+                android:textStyle="bold"
+                android:textColor="@color/primary_light"
+                android:textSize="40dp"></TextView>
+
+            <TextView
+                android:id="@+id/text_cystitis"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:gravity="center"
+                android:text="Cystitis"
+                android:textStyle="bold"
+                android:textColor="@color/primary_light"
+                android:textSize="40dp"></TextView>
 
 
-    <!--다낭성 난소 증후군 버튼 -->
-    <Button
-        android:id="@+id/btn_pcos"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_vaginitis"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="100dp"
-        android:text="PolyCystic Ovary Syndrome"
-        android:textAllCaps="false"
-        android:textSize="36dp"
-        android:background="@drawable/style_drug_option"
-        android:elevation="3dp">
-    </Button>
+        </LinearLayout>
+
+
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
