--- a/app/src/main/res/layout/activity_nickname.xml
+++ b/app/src/main/res/layout/activity_nickname.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NicknameActivity"
+    android:id="@+id/layout_nickname"
     android:background="@color/primary_light">
 
     <TextView
