--- a/app/src/main/res/layout/activity_edit_period.xml
+++ b/app/src/main/res/layout/activity_edit_period.xml
@@ -8,12 +8,12 @@
     tools:context=".EditPeriodActivity">
 
     <TextView
-        android:id="@+id/text_enter_first_date"
+        android:id="@+id/text_enter_edit_date"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:background="@color/primary_light"
         android:gravity="center"
-        android:text="Enter your most recent menstrual date!"
+        android:text="Edit menstrual date!"
         android:textColor="@color/primary_dark"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -33,7 +33,7 @@
         android:textSize="48dp"
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_enter_first_date"></Button>
+        app:layout_constraintTop_toBottomOf="@id/text_enter_edit_date"></Button>
 
     <Button
         android:id="@+id/btn_end"
@@ -41,7 +41,7 @@
         android:layout_height="93dp"
         android:background="@drawable/style_unclicked_period_border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_enter_first_date"
+        app:layout_constraintTop_toBottomOf="@id/text_enter_edit_date"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="15dp"
         android:text="end"
