--- a/app/src/main/res/layout/fragment_how_to_use.xml
+++ b/app/src/main/res/layout/fragment_how_to_use.xml
@@ -8,16 +8,37 @@
     android:background="@color/primary_dark">
     <!--android:focusableInTouchMode="true"-->
 
-    <TextView
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="how to use \nfragment"
-        android:textSize="40dp"
-        android:textColor="@color/primary_light"
-        android:gravity="center">
-    </TextView>
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_how_to_use"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="how to use \nfragment"
+                android:textSize="40dp"
+                android:textColor="@color/primary_light"
+                android:padding="10dp">
+            </TextView>
+
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
