--- a/app/src/main/res/layout/activity_recent_period.xml
+++ b/app/src/main/res/layout/activity_recent_period.xml
@@ -59,7 +59,7 @@
     </FrameLayout>
 
     <Button
-        android:id="@+id/btn_save"
+        android:id="@+id/save_btn"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         app:layout_constraintStart_toStartOf="parent"
