--- a/app/src/main/res/layout/activity_cervical_cancer.xml
+++ b/app/src/main/res/layout/activity_cervical_cancer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".CervicalCancerActivity">
+    tools:context=".information.CervicalCancerActivity">
 
     <TextView
         android:id="@+id/text_cervical_cancer"
