--- a/app/src/main/res/layout/activity_knowledge_of_menstruation.xml
+++ b/app/src/main/res/layout/activity_knowledge_of_menstruation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".KnowledgeOfMenstruationActivity">
+    tools:context=".information.KnowledgeOfMenstruationActivity">
 
     <TextView
         android:id="@+id/text_knowledge_of_menstuation"
