--- a/app/src/main/res/layout/activity_menstrual_cup.xml
+++ b/app/src/main/res/layout/activity_menstrual_cup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".MenstrualCupActivity">
+    tools:context=".information.MenstrualCupActivity">
 
     <TextView
         android:id="@+id/text_menstual_cup"
