--- a/app/src/main/res/layout/activity_oral_contraceptives.xml
+++ b/app/src/main/res/layout/activity_oral_contraceptives.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".OralContraceptionActivity">
+    tools:context=".information.OralContraceptionActivity">
 
     <TextView
         android:id="@+id/text_oral_contraceptives"
