--- a/app/src/main/res/layout/activity_pcos.xml
+++ b/app/src/main/res/layout/activity_pcos.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".PcosActivity">
+    tools:context=".information.PcosActivity">
 
     <TextView
         android:id="@+id/text_pcos"
