--- a/app/src/main/res/layout/activity_pmsactivity.xml
+++ b/app/src/main/res/layout/activity_pmsactivity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".PMSActivity">
+    tools:context=".information.PMSActivity">
 
     <TextView
         android:id="@+id/text_pms"
