--- a/app/src/main/res/layout/activity_pre_menstruation_knowledge.xml
+++ b/app/src/main/res/layout/activity_pre_menstruation_knowledge.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".PreMenstruationKnowledgeActivity">
+    tools:context=".information.PreMenstruationKnowledgeActivity">
 
     <TextView
         android:id="@+id/text_knowledge"
