--- a/app/src/main/res/layout/activity_pre_product.xml
+++ b/app/src/main/res/layout/activity_pre_product.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".PreProductActivity">
+    tools:context=".information.PreProductActivity">
 
     <TextView
         android:id="@+id/text_pre_product"
