[FEAT]Edit period list api 연결

--- a/app/src/main/res/layout/activity_edit_period_list.xml
+++ b/app/src/main/res/layout/activity_edit_period_list.xml
@@ -35,6 +35,7 @@
         >
         <!--orientation 추가 가능?-->
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_period_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="8dp"
