--- a/app/src/main/res/layout/listitem_edit_period.xml
+++ b/app/src/main/res/layout/listitem_edit_period.xml
@@ -11,10 +11,10 @@
         android:layout_marginVertical="10dp"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/txt_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2022, May, 1 \n~ 2022, May, 6"
+            android:text="2022. May. 1 \n~ 2022. May. 6"
             android:textColor="@color/primary_light"
             android:textStyle="bold"
             android:textSize="28dp"
@@ -29,15 +29,26 @@
             android:layout_marginStart="50dp">
         </ImageView>
         <TextView
-            android:id="@+id/days"
+            android:id="@+id/txt_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="5 days"
+            android:text="5"
             android:textSize="28dp"
             android:textStyle="bold"
             android:textColor="@color/primary_light"
             android:layout_gravity="center"
-            android:layout_marginStart="15dp">
+            android:layout_marginStart="5dp">
+        </TextView>
+        <TextView
+            android:id="@+id/txt_days"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="days"
+            android:textSize="28dp"
+            android:textStyle="bold"
+            android:textColor="@color/primary_light"
+            android:layout_gravity="center"
+            android:layout_marginStart="5dp">
         </TextView>
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
